--- a/index.html
+++ b/index.html
@@ -10,6 +10,72 @@
       <h1>Piano</h1>
     </section>
 
+    <main>
+      <div class="keys">
+        <div class="white">
+          <p>B#</p>
+          <p>C</p>
+        </div>
+
+        <div class="black-keys">
+          <div class="black">
+            <p>C#</p>
+            <p>C♭</p>
+          </div>
+
+          <div class="black">
+            <p>D#</p>
+            <p>E♭</p>
+          </div>
+        </div>
+
+        <div class="white">
+          <p>D</p>
+        </div>
+
+        <div class="white">
+          <p>E</p>
+          <p>F♭</p>
+        </div>
+        <div class="black-keys">
+          <div class="black">
+            <p>F#</p>
+            <p>G♭</p>
+          </div>
+        </div>
+
+        <div class="white">
+          <p>E#</p>
+          <p>F</p>
+        </div>
+        <div class="black-keys">
+          <div class="black">
+            <p>G#</p>
+            <p>A♭</p>
+          </div>
+        </div>
+
+        <div class="white">
+          <p>G</p>
+        </div>
+        <div class="black-keys">
+          <div class="black" onclick="clicked()">
+            <p>A#</p>
+            <p>B♭</p>
+          </div>
+        </div>
+
+        <div class="white">
+          <p>A</p>
+        </div>
+
+        <div class="white">
+          <p>B</p>
+          <p>C♭</p>
+        </div>
+      </div>
+    </main>
+
     <script type="text/javascript" src="main.js"></script>
   </body>
 
